<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ntask2_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matsuoka.ryuya.p4@dc.tohoku.ac.jp">ryuya</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>joy</depend>
  <depend>dynamixel_sdk</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
